// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AAU, I can see informations on my search with 0 results 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex"
      >
        <div>
          <img
            class="SearchResultsMeta__Illustration-sc-18aa4n-0 bxnLjy hidden desktop:block"
            src="/images/little-forest.png"
          />
        </div>
        <div
          class="desktop:ml-6"
        >
          <div
            class="SearchResultsMeta__ResultsNumber-sc-18aa4n-1 fYecrv"
          >
            0 résultat trouvé
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex"
    >
      <div>
        <img
          class="SearchResultsMeta__Illustration-sc-18aa4n-0 bxnLjy hidden desktop:block"
          src="/images/little-forest.png"
        />
      </div>
      <div
        class="desktop:ml-6"
      >
        <div
          class="SearchResultsMeta__ResultsNumber-sc-18aa4n-1 fYecrv"
        >
          0 résultat trouvé
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AAU, I can see informations on my search with 1 result 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex"
      >
        <div>
          <img
            class="SearchResultsMeta__Illustration-sc-18aa4n-0 bxnLjy hidden desktop:block"
            src="/images/little-forest.png"
          />
        </div>
        <div
          class="desktop:ml-6"
        >
          <div
            class="SearchResultsMeta__ResultsNumber-sc-18aa4n-1 fYecrv"
          >
            1 résultat trouvé
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex"
    >
      <div>
        <img
          class="SearchResultsMeta__Illustration-sc-18aa4n-0 bxnLjy hidden desktop:block"
          src="/images/little-forest.png"
        />
      </div>
      <div
        class="desktop:ml-6"
      >
        <div
          class="SearchResultsMeta__ResultsNumber-sc-18aa4n-1 fYecrv"
        >
          1 résultat trouvé
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AAU, I can see informations on my search with many results 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex"
      >
        <div>
          <img
            class="SearchResultsMeta__Illustration-sc-18aa4n-0 bxnLjy hidden desktop:block"
            src="/images/little-forest.png"
          />
        </div>
        <div
          class="desktop:ml-6"
        >
          <div
            class="SearchResultsMeta__ResultsNumber-sc-18aa4n-1 fYecrv"
          >
            123 résultats trouvés
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex"
    >
      <div>
        <img
          class="SearchResultsMeta__Illustration-sc-18aa4n-0 bxnLjy hidden desktop:block"
          src="/images/little-forest.png"
        />
      </div>
      <div
        class="desktop:ml-6"
      >
        <div
          class="SearchResultsMeta__ResultsNumber-sc-18aa4n-1 fYecrv"
        >
          123 résultats trouvés
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
